glx/testdata/invalid/event-missing-type.glx
# Invalid: Missing required 'type' field
events:
  event-12345678:
    version: "1.0"
    date: "1850-01-15"
